aula432 - usar o context p enviar dados templates

--- a/ola_django/blog/templates/blog/exemplo.html
+++ b/ola_django/blog/templates/blog/exemplo.html
@@ -1,3 +1,5 @@
 {% extends "global/base.html" %}
 
-{% block texto %} Exemplo com block {% endblock texto %}
+{% block texto %}
+    {{ text }}
+{% endblock texto %}
