--- a/ola_django/home/templates/home/index.html
+++ b/ola_django/home/templates/home/index.html
@@ -1,3 +1,5 @@
 {% extends "global/base.html" %}
 
-{% block texto %} MUDAR TEXTO {% endblock texto %}
+{% block texto %} 
+    {{ text }}
+{% endblock texto %}
