--- a/ola_django/blog/templates/blog/index.html
+++ b/ola_django/blog/templates/blog/index.html
@@ -3,3 +3,9 @@
 {% block texto %}
     {{ text }}
 {% endblock texto %}
+
+{% block posts %}
+    {% include "global/partials/postblock.html" %}
+{% endblock posts %}
+
+
