aula436 - usando data.py e loop

--- a/ola_django/base/global/partials/postblock.html
+++ b/ola_django/base/global/partials/postblock.html
@@ -1,10 +1,10 @@
 <article class="post">
     <header>
         <h2 class="post__title">
-            Lorem ipsum dolor sit amet. 
+            {{ post.title }} 
         </h2>
     </header>
     <div class="post__body">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis in sapiente veritatis culpa provident quasi aliquam optio! Molestiae, unde illo incidunt laboriosam dicta itaque accusantium voluptatibus voluptatem doloremque quia earum voluptates facere beatae vel minus. Aspernatur distinctio iure eius quo dolores non blanditiis culpa minus facilis rerum. Illo, consectetur magni.
+        {{ post.body }}
     </div>
 </article>
