--- a/ola_django/base/static/global/css/style.css
+++ b/ola_django/base/static/global/css/style.css
@@ -19,3 +19,21 @@ body {
     min-height: 100vh;
     /* Garante que o body ocupe pelo menos a altura da janela */
 }
+
+.content {
+    display: grid;
+    gap: 1.5rem;
+    padding: 1.5rem;
+  }
+  
+  .post {
+    background: #fff;
+    padding: 1.5rem;
+    box-shadow: 5px 2px 5px rgba(0, 0, 0, 10%);
+  }
+  
+  @media (min-width: 600px) {
+    .content {
+      grid-template-columns: repeat(auto-fill, minmax(32rem, 1fr));
+    }
+  }
