--- a/ola_django/blog/templates/blog/index.html
+++ b/ola_django/blog/templates/blog/index.html
@@ -5,7 +5,9 @@
 {% endblock texto %}
 
 {% block posts %}
-    {% include "global/partials/postblock.html" %}
+    {% for post in posts %}
+        {% include "global/partials/postblock.html" %}
+    {% endfor %}
 {% endblock posts %}
 
 
